2005-05-15  James Turner  <james@worldforge.org>

	* Eris/ServerInfo.cpp, Eris/ServerInfo.h: augment ServerInfo to expose the
	  the version and build-date information if the server provides it.
	  
	* test/metaquery.cpp: in HTML mode, output the server program name,
	  version and build date.

2005-05-08  Al Riddoch  <alriddoch@zepler.org>

	* Release 1.3.5, Interface version 5.

2005-05-08  Al Riddoch  <alriddoch@zepler.org>

	* configure.ac: Make a .bz2 tarball as well as a .gz one for
	  distribution.

	* eris.spec.in: Clean up and harmonise.

2005-05-07  Al Riddoch  <alriddoch@zepler.org>

	* configure.ac: Increment version and interface version so that clients
	  can depend on the current API.

2005-05-04  Hagen Moebius  <hagen.moebius@starschiffchen.de>

	* bindings/polls/glib/PollGlib.h, bindings/polls/glib/PollGlibFD.h,
	  bindings/polls/glib/PollGlibSource.h: Removed compatibility with glib
	  versions < 1.3.

2005-05-03  James Turner  <james@worldforge.org>

    * Eris/Connection.cpp: actually process server info responses on Connection,
      so it's possible the ::getServerInfo might return useful data.
      
    * test/tests.cpp: add a test for getting the server info
    
2005-04-30  Al Riddoch  <alriddoch@zepler.org>

	* Eris/DeleteLater.h: Make annotation after close of header guard
	  into a comment.

2005-05-03  James Turner  <james@worldforge.org>

	* Eris/Account.cpp: clean up how login timeouts are handled, so tests
	  pass on Mac (and valgrind should warn about one less thing, I think).
	  
	* Eris/Meta.cpp, Eris/Meta.h: make Meta's timeout be an auto-ptr, and
	  clean up the usage generally, to hopefully make it more robust.

	* Eris/DeleteLater.h: add missing include guards. Ooops.

2005-05-02  James Turner  <james@worldforge.org>

    * Eris/Entity.cpp: updatePredictedState: handle the case where no
      acceleration value has been defined.
      
    * Eris/ServerInfo.h, Eris/ServerInfo.cpp: make the default constructor