@@ -45,8 +45,14 @@ void ServerInfo::processServer(const RootEntity &svr)
     _clients = svr->getAttr("clients").asInt();
     _server = svr->getAttr("server").asString();
     _uptime = svr->getAttr("uptime").asFloat();
-    m_version = svr->getAttr("version").asString();
-    m_buildDate = svr->getAttr("builddate").asString();
+    
+    if (svr->hasAttr("version")) {
+        m_version = svr->getAttr("version").asString();
+    }
+    
+    if (svr->hasAttr("builddate")) {
+        m_buildDate = svr->getAttr("builddate").asString();
+    }
 }
 
 void ServerInfo::setPing(int p)
